# camera_pose_estimation_lib

./: CMakeLists.txt  README.md  TestApp.cpp
include/: PoseEstimator.h
src/: PoseEstimator.cpp
test/: CMakeLists.txt  LibraryTest.cpp
